Fix bug with z-index for "Copy code" button
Added z-index 1000 for it and tooltip

--- a/resources/sass/function-page/code/_copy-icon.sass
+++ b/resources/sass/function-page/code/_copy-icon.sass
@@ -13,6 +13,7 @@
         transition: all .3s
         cursor: pointer
         opacity: .8
+        z-index: 1000
 
         &:hover
             background-color: rgba(0, 0, 0, .7)
@@ -29,6 +30,7 @@
             opacity: 0
             transform: translateX(10px)
             transition: all .3s
+            z-index: 1000
 
             &--green
                 background-color: #89eea1
